donate to family

--- a/index.html
+++ b/index.html
@@ -11,6 +11,64 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <section class="top-banner">
+        <h1>Let,s Help Those Who Are More In Need</h1>
+        <p class="white-color">Your little donation can save a man's life.The people of Sylhet and Shunamgonj are going a critical sistuation now.So let's help them.</p>
+        <div class="other-link-button">
+            <a class="link-button" href="#">Donate Now</a>
+           </div>
+    </section>
+
+    <section>
+       <div class="donate-today">
+         <h2>Donate Today</h2>
+        <p class="donate-para">It,s time to stand flood victims.You can donate according to your ability.You can donate 100tk,200tk or any other amounts by your ability.</p>
+      </div>
+        
+          <div class="amount">
+            <a href="">100tk</a>
+            <a id="dui-shoto-tk" href="">200tk</a>
+            <a href="">500tk</a>
+            <a href="">1000tk</a>
+            <a href="">5000tk</a> <br>
+ 
+          </div>
+          <div class="other-amount">
+              <a href="">Other Amount(Taka)</a>
+          </div>
+            <br>
+           <hr>
+
+           <div class="other-link-button">
+            <a class="link-button" href="#">Donate Now</a>
+           </div>
+    </section>
+
+    <section >
+        <div class="donate-plan">
+            <h2>Our Donate Plan</h2>
+        <p class="donate-para">We have launched a strategy to recover the affected areas.We will provide dry food,cooked food,safe drinking water,emergency healthy treatment,managing shelter etc for them.</p>
+
+        </div>
+        <div class="flex-container">
+
+            <div class="family" id="blue">
+                <img class="img-pic" src="images/icon8.svg" alt="">
+                <h3>Food for a family</h3>
+                <p>Banglades is living through unprecedented times.The natural disaster is causing uncertainty in their income.As a result they are facing uncertain challenges in meeting daily food requirements.</p>
+            </div>
+            <div class="family" id="red">
+                <img class="img-pic"src="images/icon5.svg" alt="">
+                <h3>Shelter for a family</h3>
+                <p>We wish to provide sustainable emergency shelter for people displaced in a natural disaster.Help us to provide homes to children,families and communities that have lost everything.</p>
+            </div>
+            <div class="family" id="yellow">
+                <img class="img-pic"src="images/icon6.svg" alt="">
+                <h3>Education for a child</h3>
+                <p>There are a lot of children who dont't meet minimum reading proficiency standards.We can empower them for a brighter future equipped with literacy and essential life skills.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
