--- a/index.html
+++ b/index.html
@@ -70,5 +70,62 @@
             </div>
         </div>
     </section>
+
+    <section class="donation-section">
+       <div class="their-lives">
+
+        <div class="donation0">
+            <img src="images/donation0.jpg" alt="">
+        </div>
+        <div class="their-lives-para">
+            <h2>Their lives depend on your donation</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae ratione doloribus asperiores, ea ad ipsum architecto perferendis sit pariatur nihil, aut aliquam unde in animi voluptatum fugiat reiciendis, accusantium quam.<p> 
+
+            <p>Molestiae aut aspernatur hic blanditiis dolores quas voluptate aperiam dolore?Lorem ipsum dolor sit amet. </p>
+
+
+            <button class="contribute-button">How to contribute?</button>
+        </div>
+
+       </div>
+
+
+       <div class="their-lives">
+
+        <div class="donation0">
+            <img src="images/donation9.jpg" alt="">
+        </div>
+        <div class="their-lives-para">
+            <h2>Future development depends on children</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae ratione doloribus asperiores, ea ad ipsum architecto perferendis sit pariatur nihil, aut aliquam unde in animi voluptatum fugiat reiciendis, accusantium quam.<p> 
+
+            <p>Molestiae aut aspernatur hic blanditiis dolores quas voluptate aperiam dolore?Lorem ipsum dolor sit amet. </p>
+
+
+            <button class="contribute-button">How to contribute?</button>
+        </div>
+
+       </div>
+
+       <div class="their-lives">
+
+        <div class="donation0">
+            <img src="images/donation3.jpg" alt="">
+        </div>
+        <div class="their-lives-para">
+            <h2>They need us to survive</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae ratione doloribus asperiores, ea ad ipsum architecto perferendis sit pariatur nihil, aut aliquam unde in animi voluptatum fugiat reiciendis, accusantium quam.<p> 
+
+            <p>Molestiae aut aspernatur hic blanditiis dolores quas voluptate aperiam dolore?Lorem ipsum dolor sit amet. </p>
+
+
+            <button class="contribute-button">How to contribute?</button>
+        </div>
+
+       </div>
+    </section>
+
+
+    
 </body>
 </html>
