--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section class="top-banner">
         <h1>Let,s Help Those Who Are More In Need</h1>
-        <p class="white-color">Your little donation can save a man's life.The people of Sylhet and Shunamgonj are going a critical sistuation now.So let's help them.</p>
+        <p class="white-color">A bit of Your contribution can save a man's life.The people of Sylhet and Shunamgonj are going through a critical sistuation now.So let's help them.</p>
         <div class="other-link-button">
             <a class="link-button" href="#">Donate Now</a>
            </div>
@@ -48,7 +48,7 @@
     <section >
         <div class="donate-plan">
             <h2>Our Donate Plan</h2>
-        <p class="donate-para">We have launched a strategy to recover the affected areas.We will provide dry food,cooked food,safe drinking water,emergency healthy treatment,managing shelter etc for them.</p>
+        <p class="donate-para">We have launched a strategy to recover the affected areas.We will provide dry food,cooked food,safe drinking water,emergency health treatment,providing shelter etc for them.</p>
 
         </div>
         <div class="flex-container">
@@ -56,7 +56,7 @@
             <div class="family" id="blue">
                 <img class="img-pic" src="images/icon8.svg" alt="">
                 <h3>Food for a family</h3>
-                <p>Banglades is living through unprecedented times.The natural disaster is causing uncertainty in their income.As a result they are facing uncertain challenges in meeting daily food requirements.</p>
+                <p>Banglades is living through unprecedented times.The natural disaster is causing uncertainty in their income.As a result they are facing uncertain challenges in meeting  their daily food requirements.</p>
             </div>
             <div class="family" id="red">
                 <img class="img-pic"src="images/icon5.svg" alt="">
@@ -126,6 +126,18 @@
     </section>
 
 
-    
+    <section class="my-updates">
+        <h2>Get My Updates</h2>
+        <p>A little bit can help them to survive their lives.You can get updates by these links.To know updates or more information subscribe our channel.</p>
+        <form action="">
+            <input type="Email" placeholder="Email:">
+          <button>Subscribe</button>
+        </form>
+    </section>
 </body>
+
+<footer>
+    <h5>Be Humble</h5>
+    <p> © I'm gonna do it</p>
+</footer>
 </html>
